tests/const_param_fn_type_distinct_bad.stderr
tests/const_param_fn_type_distinct_bad.hop:9:2: error: HOP2015: no matching overload
